--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "dash",
+  "name": "dashboardhumble",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.6.2",
-    "babel-plugin-import": "^1.7.0",
-    "bizcharts": "^3.1.8",
-    "chart.js": "^2.7.2",
-    "firebase": "^5.0.4",
+    "antd": "^3.11.0",
+    "babel-plugin-import": "^1.11.0",
+    "chart.js": "^2.7.3",
+    "firebase": "^5.6.0",
     "history": "^4.7.2",
-    "react": "^16.4.0",
-    "react-app-rewired": "^1.5.2",
-    "react-chartjs-2": "^2.7.2",
-    "react-circular-progressbar": "^0.8.0",
-    "react-dom": "^16.4.0",
-    "react-redux": "^5.0.7",
+    "moment": "^2.22.2",
+    "react": "^16.6.3",
+    "react-app-rewired": "^1.6.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
@@ -26,5 +25,14 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
