--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "dashboardhumble",
+  "name": "humbledash",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.11.0",
-    "babel-plugin-import": "^1.11.0",
-    "chart.js": "^2.7.3",
-    "firebase": "^5.6.0",
-    "history": "^4.7.2",
-    "moment": "^2.22.2",
-    "react": "^16.6.3",
-    "react-app-rewired": "^1.6.2",
-    "react-chartjs-2": "^2.7.4",
-    "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "redux": "^4.0.1",
+    "antd": "^3.22.0",
+    "babel-plugin-import": "^1.12.0",
+    "chart.js": "^2.8.0",
+    "customize-cra": "^0.5.0",
+    "firebase": "^6.4.0",
+    "moment": "^2.24.0",
+    "react": "^16.9.0",
+    "react-app-rewired": "^2.1.3",
+    "react-chartjs-2": "^2.7.6",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
@@ -29,10 +29,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
